[package]
name = "markdown-ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.11.0"
pulldown-cmark-to-cmark = "15.0.0"

[dev-dependencies]
indoc = "1.0.3"
pretty_assertions = "1.1.0"