[package]
name = "markdown-ast"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

description = """
Markdown AST representation for document construction and transformation, \
based on pulldown-cmark."""

authors = [
    "Connor Gray <code@connorgray.com>"
]
repository = "https://github.com/ConnorGray/Markdown"
readme = "./README.md"
keywords = ["markdown", "ast"]
categories = ["encoding", "parser-implementations", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.11.0"
pulldown-cmark-to-cmark = "15.0.0"

[dev-dependencies]
indoc = "1.0.3"
pretty_assertions = "1.1.0"