[package]
name = "md2nb"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

description = "Convert Markdown files into Wolfram Notebooks"
authors = [
    "Connor Gray <code@connorgray.com>"
]
repository = "https://github.com/ConnorGray/md2nb"
readme = "README.md"
keywords = ["markdown", "notebook", "convert", "wolfram"]
categories = ["encoding", "visualization", "development-tools"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown-ast = { path = "../markdown-ast" }

wolfram-app-discovery = "0.2.1"
wolfram-expr = "0.1.1"
wstp = "0.2.0"

clap = { version = "3.0.14", features = ["derive"] }
