[package]
name = "wolfram-markdown-link"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wolfram-library-link = "0.2.10"

markdown-ast = { path = "../markdown-ast" }
